# lexikon

./: README.md  VerneVoyage.txt  VerneVoyage_short.txt  hit_api.py  lex.txt  lexikon_output.txt  lexikon_v2.py  pyproject.toml  unique_lemmas.txt
documentation/: LEXIKON_REDESIGN_ISSUE_1.md
src/lexikon/: __main__.py  cleaner.py  lemmatizer.py  loader.py  translator.py  writer.py
tests/: test_basic.py  test_cleaner.py  test_lemmatizer.py  test_loader.py  test_pipeline.py  test_translator.py  test_writer.py
tests/fixtures/: expected_output.txt  gutenberg_sample.txt
